build: apontando para contexto de produção

--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title></title>
-  <base href="/timetamundi/">
+  <base href="/app-timetamundi/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/logo_metamundi.jpeg">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -10,6 +10,6 @@
 <style>.mat-typography{font:400 14px/20px Roboto,Helvetica Neue,sans-serif;letter-spacing:normal}html,body{height:100%}body{margin:0;font-family:Roboto,Helvetica Neue,sans-serif}</style><link rel="stylesheet" href="styles.8cba0c75668bcf4f.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.8cba0c75668bcf4f.css"></noscript></head>
 <body class="mat-typography">
   <app-root></app-root>
-<script src="runtime.0e420cb17f960190.js" type="module"></script><script src="polyfills.40e394faa9b1d4e2.js" type="module"></script><script src="main.67ef68d7c1b32403.js" type="module"></script>
+<script src="runtime.0e420cb17f960190.js" type="module"></script><script src="polyfills.40e394faa9b1d4e2.js" type="module"></script><script src="main.1088067b23a6d619.js" type="module"></script>
 
 </body></html>
